--- a/AzureTestWebApp/appsettings.json
+++ b/AzureTestWebApp/appsettings.json
@@ -1,5 +1,8 @@
 {
   "TestingNewAzureFunction": "http://localhost:7071/api/TestingNewAzureFunction",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:hqtestdb.database.windows.net,1433;Initial Catalog=HQTestDB;Persist Security Info=False;User ID=hussnian;Password=qudsi096@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
